--- a/app/webroot/sass/dfcusa_pm.scss
+++ b/app/webroot/sass/dfcusa_pm.scss
@@ -1,3 +1,6 @@
+@import url('/dfcusa-pm/app/webroot/js/notyfy/jquery.notyfy.css');
+@import url('/dfcusa-pm/app/webroot/js/notyfy/themes/default.css');
+
 .hide {
   display: none !important;
 }
