--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -1,25 +1,129 @@
+<script type="text/mustache-template" id="welcomeViewTemplate">
+	<div class="header b-b bg-white-only">
+    <button class="btn btn-success pull-right btn-sm newProject"><i class="fa fa-plus"></i> Add New Project</button>
+    <h4 class="m-t m-b-none">Welcome to Design for Change!</h4>
+  </div>
+	<div class="modal-body">
+		
+		
+	</div>
+</script>
+
+<div id="editOrganizationModal" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+	    <div class="modal-header">
+	      <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	      <h4 class="modal-title">Edit Your Organization</h4>
+	    </div>
+	    <div class="modal-body">
+				<form role="form" id="newOrganizationForm">
+				  <div class="form-group">
+						<label for="projectName">Organization name</label>
+						<input type="text" class="form-control" id="name" name="name" placeholder="Your organization's name" data-validate="required">
+						<span for="name" class="error-span hide">Please enter a name for the organization.</span>
+				  </div>
+        	<div class="form-group uploadFile">
+        		<label>Logo</label>
+        		<br/>
+    				<img src="" class="profilePic"/>
+        		<a href="javascript:void(0)" class="btn btn-small btn-default marginButton uploadPicButton">Upload</a>
+        		<input class="input-large uploadPic hide" type="file" id="logo" name="file"/>
+        		<input class="input-large hide" type="hidden" id="logo_source"/>
+          </div>
+				</form>
+			</div>
+			<div class="modal-footer">
+	      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+	      <button type="button" class="btn btn-primary saveOrganization">Save Organization</button>
+	    </div>
+		</div>
+	</div>
+</div>
+
+<div id="editProfileModal" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+	    <div class="modal-header">
+	      <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	      <h4 class="modal-title">Edit Your Profile</h4>
+	    </div>
+	    <div class="modal-body">
+				<form role="form" id="newProjectForm">
+				  <div class="form-group">
+						<label for="first_name">First name</label>
+						<input type="text" class="form-control" id="first_name" name="first_name" placeholder="Your first name" data-validate="required">
+						<span for="first_name" class="error-span hide">Please enter your first name.</span>
+				  </div>
+					<div class="form-group">
+						<label for="last_name">Last name</label>
+						<input type="text" class="form-control" id="last_name" name="last_name" placeholder="Your last name" data-validate="required">
+						<span for="last_name" class="error-span hide">Please enter your last name.</span>
+					</div>
+					<div class="form-group">
+						<label for="email">Email address</label>
+						<input type="text" class="form-control" id="email" name="email" placeholder="Your email" data-validate="required">
+						<span for="email" class="error-span hide">Please enter your email.</span>
+					</div>
+					<div class="form-group">
+						<label for="location">Location</label>
+						<input type="text" class="form-control" id="location" name="location" placeholder="City, State" data-validate="required">
+						<span for="location" class="error-span hide">Please enter your location.</span>
+					</div>
+					<div class="form-group">
+						<label for="password">New Password</label>
+						<input type="password" class="form-control" id="password" name="password" placeholder="Enter a new password">
+					</div>
+        	<div class="form-group uploadFile">
+        		<label>Profile Picture</label>
+        		<br/>
+    				<img src="" class="profilePic"/>
+        		<a href="javascript:void(0)" class="btn btn-small btn-default marginButton uploadPicButton">Upload</a>
+        		<input class="input-large uploadPic hide" type="file" id="profilepic" name="file"/>
+        		<input class="input-large hide" type="hidden" id="profilepic_source"/>
+          </div>
+				</form>
+			</div>
+			<div class="modal-footer">
+	      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+	      <button type="button" class="btn btn-primary saveProfile">Save Profile</button>
+	    </div>
+		</div>
+	</div>
+</div>
+
 <script type="text/mustache-template" id="projectsListTemplate">
 	<div class="header b-b bg-white-only">
-    <button class="btn btn-success pull-right btn-sm" id="newProject"><i class="fa fa-plus"></i> Add New Project</button>
-    <h4 class="m-t m-b-none">Your Projects</h4>
+    <button class="btn btn-success pull-right btn-sm newProject"><i class="fa fa-plus"></i> Add New Project</button>
+    <h4 class="m-t m-b-none" id="title">Your Projects</h4>
   </div>
 	<ul class="projectsList">
+	</ul>
+</script>
+
+<script type="text/mustache-template" id="blankTemplate">
+	<div class="header b-b bg-white-only">
+    <button class="btn btn-success pull-right btn-sm newProject"><i class="fa fa-plus"></i> Add New Project</button>
+    <h4 class="m-t m-b-none" id="title">{{ucWords content.stage}}</h4>
+  </div>
+	<div class="generalBox">
+		{{{content.content_obj.content}}}
 	</ul>
 </script>
 
 <script type="text/mustache-template" id="projectMainTabletTemplate">
 	<li>
 		<section class="panel no-borders hbox projectPanel">
-	    <aside class="bg-info lter r-l text-center v-middle" style="background-image: url('{{project.profilepic}}'); background-size: 100%; background-repeat: no-repeat">
+	    <aside class="bg-info lter r-l text-center v-middle" style="background-image: url('{{project.profilepic}}'); background-size: 120%; background-repeat: no-repeat">
 	    </aside>
 	    <aside>
 	      <div class="pos-rlt">
 	        <span class="arrow left hidden-xs"></span>
 	        <div class="panel-body">                      
 	          <div class="clearfix m-b">
-	            <small class="text-muted pull-right">{{humanDateElapsed project.last_updated}}</small>
-	            <a href="#" class="thumb-sm pull-left m-r">
-	              <img src="{{organization.logo}}" class="img-circle">
+	            <small class="text-muted pull-right">{{humanDateElapsed project.last_updated}}</br>{{project.mentor.first_name}} {{project.mentor.last_name}}</small>
+ 	            <a href="javascript:void(0)" class="thumb-sm pull-left m-r">
+	              <img src="{{project.mentor.profilepic}}" class="img-circle">
 	            </a>
 	            <div class="clear">
 	              <a href="#"><strong>{{project.name}}</strong></a>
@@ -136,7 +240,7 @@
 
 <script type="text/mustache-template" id="startedTemplate">
 	<div class="float">
-		<iframe width="560" height="315" src="//www.youtube.com/embed/{{content.content_obj.getting_started.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe width="400" height="200" src="//www.youtube.com/embed/{{content.content_obj.getting_started.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
 	</div>
 	{{{content.content_obj.getting_started.text}}}
 </script>
@@ -147,11 +251,11 @@
 
 <script type="text/mustache-template" id="skillsTemplate">
 	{{{content.content_obj.skills.text}}}
-	<section class="panel clearfix"> 
+	<section class="panel clearfix skillsBox"> 
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
       <ul class="steps">
       	{{#content.content_obj.skills.skills}}
-	        <li class="step{{#if_eq @index 0}} active{{/if_eq}}""><a href="javascript:void(0)" class="changeSkill" data-target="#{{this.skill}}" data-skill="{{this.skill}}"><span class="badge badge-info">{{add @index 1}}</span>{{this.skill}}</a></li>
+	        <li class="step{{#if_eq @index 0}} active{{/if_eq}}""><a href="javascript:void(0)" class="changeSkill" data-target="#{{this.skill}}" data-skill="{{this.skill}}"><span class="badge badge-info">{{add @index 1}}</span>{{ucWords this.skill}}</a></li>
 	      {{/content.content_obj.skills.skills}}
       </ul>
     </div>
@@ -169,26 +273,15 @@
 
 <script type="text/mustache-template" id="activitiesTemplate">
 	{{{content.content_obj.activities.text}}}
-	<div>
-		<table width="80%">
+	<br/>
+	<div id="toolbar">
+		<table width="80%" id="activitiesSearch">
 			<tr valign="top">
 				<td>
 					<div class="input-group input-s m-t-sm">
 			      <span class="input-group-addon input-sm"><i class="fa fa-heart"></i></span>
-			      <select class="form-control input-sm" id="search-skill">
-			      	<option value="all">Select Skill</option>
-			      	<option value="awareness">Awareness</option>
-			      	<option value="engagement">Engagement</option>
-			      	<option value="empathy">Empathy</option>
-			      	<option value="collaboration">Collaboration</option>
-			      	<option value="communication">Communication</option>
-			      	<option value="connection">Connection</option>
-			      	<option value="creativity">Creativity</option>
-			      	<option value="critical_thinking">Critical Thinking</option>
-			      	<option value="initiative">Initiative</option>
-			      	<option value="reflection">Reflection</option>
-			      	<option value="resilience">Resilience</option>
-			      	<option value="responsibility">Responsibility</option>
+			      <select class="form-control input-sm skillsList" id="search-skill">
+			      	<option value="all">All skills</option>
 			     	</select>
 			    </div>
 			  </td>
@@ -207,7 +300,7 @@
 			 		<div class="input-group input-s m-t-sm">
 			      <span class="input-group-addon input-sm"><i class="fa fa-clock-o"></i></span>
 			      <select class="form-control input-sm" id="search-time_required">
-			      	<option value="all">All</option>
+			      	<option value="all_times">All</option>
 			      	<option value="15">15-30 minutes</option>
 			      	<option value="30">30-60 minutes</option>
 			      	<option value="60">Over 60 minutes</option>
@@ -231,19 +324,29 @@
 	    <div class="wizard clearfix" id="form-wizard">
 	      <ul class="steps">
 	      	{{#content.content_obj.submit.deliverables}}
-		        <li data-target="#deliverable{{add @index 1}}" class="step{{#if_eq @index 0}} active{{/if_eq}}"><a href="javascript:void(0)" class="changeDeliverable" data-target="#deliverable{{add @index 1}}"><span class="badge badge-info">{{add @index 1}}</span>{{this.deliverable}}</a></li>
+		        <li data-target="#deliverable{{add @index 1}}" class="step{{#if_eq @index 0}} active{{/if_eq}}"><a href="javascript:void(0)" class="changeDeliverable" data-target="#deliverable{{add @index 1}}"><span class="badge badge-info">{{add @index 1}}</span>{{this.label}}</a></li>
 		      {{/content.content_obj.submit.deliverables}}
 	      </ul>
 	    </div>
 	    <div class="step-content">
-			  <form id="projectDeliverables">
+			  <form id="projectDeliverables" class="projectDeliverables">
 			  	{{#content.content_obj.submit.deliverables}}
-		        <div class="step-pane" id="deliverable{{add @index 1}}">
-		         {{{this.form}}}
+		        <div class="step-pane" id="deliverable{{add @index 1}}" style="float: top">
+		         {{{this.explanation}}}
+		         <br/><br/>
+		         {{#if_eq this.form 'textarea'}}
+		         	<textarea class="form-control col-lg-12" rows="10" data-key="{{this.key}}"></textarea>
+		         {{/if_eq}}
+		         {{#if_eq this.form 'list'}}
+				        <br/><br/><a href="javascript:void(0)" class="btn btn-sm btn-primary addListDeliverable marginButton listItemAdd" data-key="{{this.key}}">Add</a>
+		         		<div class="items">
+		         			
+		         		</div>
+		         {{/if_eq}}
 		        </div>
 		    	{{/content.content_obj.submit.deliverables}}
 		      <div class="actions m-t">
-		        <button type="button" class="btn btn-success btn-sm saveDeliverable">Save</button>
+				    <button type="button" class="btn btn-success btn-sm saveDeliverable">Save</button>
 		      </div>
 		    </form>
 	    </div>
@@ -277,11 +380,29 @@
 	    <footer class="panel-footer pos-rlt">
 	      <span class="arrow top"></span>
 	      {{#activity.skills}}
-	      	<a href="#activities/{{this}}"><span class="label bg-primary skill {{this}}">{{ucWords this}}</span></a>
+	      	<a href="#activities/{{this.skill}}/all_ages/all_times"><span class="label bg-primary skill marginButton" style="background-color: {{this.color}}">{{ucWords this.skill}}</span></a>
 	      {{/activity.skills}}
-	      <div class="btn btn-white btn-xs pull-right"><i class="fa fa-clock-o text-muted"></i> {{activity.time_required}} mins</div>
-	      <div class="btn btn-white btn-xs pull-right marginButton"><i class="fa fa-group text-muted"></i> {{activity.age_group}}</div>
+	      <a href="#activities/all/all_ages/{{activity.time_required}}" class="btn btn-white btn-xs pull-right marginButton"><i class="fa fa-clock-o text-muted"></i> {{ucWords activity.time_required}}</a>
+	      <a href="#activities/all/{{activity.age_group}}/all_times" class="btn btn-white btn-xs pull-right"><i class="fa fa-group text-muted"></i> {{ucWords activity.age_group}}</a>
 	    </footer>
 	  </section>
 	 </div>
+</script>
+
+<script type="text/mustache-template" id="activitiesListTemplate">
+	<div class="header b-b bg-white-only col-md-12">
+    <h4 class="m-t m-b-none col-md-3">Search Activities</h4>
+    <div class="pull-right col-md-9 searchToolbar">
+    	
+    </div>
+  </div>
+	<div class="activitiesContent">
+		<div class="alert alert-info">Please use the options above to search for Activities.</div>
+	</div>
+	<div class="hide staging">
+	</div>
+</script>
+
+<script type="text/mustache-template" id="projectFilesTemplate">
+
 </script>
