--- a/app/webroot/sass/dfcusa_pm.scss
+++ b/app/webroot/sass/dfcusa_pm.scss
@@ -1,5 +1,6 @@
 @import url('/dfcusa-pm/app/webroot/js/notyfy/jquery.notyfy.css');
 @import url('/dfcusa-pm/app/webroot/js/notyfy/themes/default.css');
+@import url('/dfcusa-pm/app/webroot/js/summernote/summernote.css');
 
 .hide {
   display: none !important;
@@ -62,6 +63,7 @@
 
 .projectPanel {
   min-width: 700px;
+  padding-bottom: 0px;
 }
 
 .stageContainer {
@@ -75,8 +77,11 @@
   .sectionText {
     a[href^="http://"],
     a[href^="https://"]{
-        color: #428bca;
-        text-decoration: underline;
+      color: #428bca;
+      text-decoration: underline;
+    }
+    .btn {
+      text-decoration: none !important;
     }
   }
 }
@@ -87,42 +92,7 @@
 }
 
 .skill {
-  &.awareness {
-    background-color: lime;
-  }
-  &.engagement {
-    background-color: teal;
-  }
-  &.empathy {
-    background-color: maroon;
-  }
-  &.collaboration {
-    background-color: tan;
-  }
-  &.communication {
-    background-color: olive;
-  }
-  &.connection {
-    background-color: yellow orange;
-  }
-  &.creativity {
-    background-color: purple;
-  }
-  &.critical_thinking {
-    background-color: salmon;
-  }
-  &.initiative {
-    background-color: light red;
-  }
-  &.reflection {
-    background-color: orange;
-  }
-  &.resilience {
-    background-color: forest green;
-  }
-  &.responsibility {
-    background-color: fuchsia;
-  }
+
 }
 
 .activities {
@@ -147,6 +117,16 @@ form {
   margin: 20px;
 }
 
+.modal-body {
+  form {
+    margin: 0px 10px 20px 10px !important;
+  }
+  .error-span {
+    margin-top: 10px;
+    color: red;
+  }
+}
+
 .center {
   margin-left: auto;
   margin-right: auto;
@@ -161,4 +141,70 @@ form {
 .profilePicSmall {
   width: 25px;
   height: 25px;
+}
+
+.htmleditor {
+  overflow: scroll;
+  height: 300px;
+  &.small {
+    height: 100px;
+  }
+  &.large {
+    height: 700px;
+  }
+}
+
+.note-editable {
+  background-color: #fff;
+}
+
+.generalBox {
+  background-color: #fff;
+  padding: 20px;
+}
+
+.skillsBox {
+  height: 150px;
+}
+
+.activitiesContent {
+  margin: 65px 15px;
+}
+
+.items {
+  display: block;
+}
+
+.listItem {
+  margin-bottom: 20px;
+  margin-right: 20px;
+  width: 97%;
+}
+
+.listItemContainer {
+  position: relative;
+}
+
+.listItemAdd {
+  position: absolute;
+  top: 28px;
+  left: -5px;
+}
+
+.listItemDelete {
+  position: absolute;
+  top: 10px;
+  right: -10px;
+}
+
+.uploadFiles {
+  margin-bottom: 0px !important;
+}
+
+.input-group {
+  margin-right: 20px;
+}
+
+.projectDeliverables {
+  position: relative;
 }
