--- a/app/webroot/appsrc/src/templates/admin.html
+++ b/app/webroot/appsrc/src/templates/admin.html
@@ -197,7 +197,7 @@
 		  </div>
 		  <div class="form-group">
 	  		<label>Author</label>
-	  		<select class="form-control" id="author_id" name="author_id"></select>
+	  		<select class="form-control" id="user_id" name="user_id"></select>
 	    </div>		  
 			<div class="form-group">
 				<label>Description</label>
@@ -205,7 +205,7 @@
 		  </div>
 		  <div class="form-group">
 				<label>Stage</label>
-				<select name="stage" class="form-control input-sm" data-value="{{activity.stage}}">
+				<select name="stages" class="form-control input-sm" data-value="{{activity.stages}}">
 					<option value="feel">Feel</option>
 					<option value="imagine">Imagine</option>
 					<option value="do">Do</option>
