--- a/app/webroot/appsrc/src/templates/admin.html
+++ b/app/webroot/appsrc/src/templates/admin.html
@@ -70,6 +70,10 @@
 	  			<option value="environment">Environment</option>
 	  			<option value="health">Health</option>
 	  			<option value="justice">Justice</option>
+	  			<option value="bullying">Bullying</option>
+	  			<option value="violence">Violence</option>
+	  			<option value="children">Children</option>
+	  			<option value="homelessness">Homelessness</option>
 	  			<option value="other">Other</option>
 	  		</select>
 	  		<span for="projectCategory" class="error-span hide">Please enter a category for this project.</span>
@@ -83,15 +87,35 @@
 	  		<label for="projectDescription">Image</label>
 		    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="100000000">
 		      <ol class="carousel-indicators" style="top: 220px">
-		        <li data-target="#carousel-example-generic" data-slide-to="0" data-image="farmstand.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="0" class="active" data-image="farmstand.png"></li>
 		        <li data-target="#carousel-example-generic" data-slide-to="1" data-image="recycling.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="2" data-image="protests.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="3" data-image="children.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="4" data-image="bullying.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="5" data-image="violence.png"></li>
+		        <li data-target="#carousel-example-generic" data-slide-to="6" data-image="homesless.png"></li>
 		      </ol>
 		      <div class="carousel-inner">
 		        <div class="item active">
 		          <img src="/dfcusa-pm/app/webroot/assets/projects/farmstand.png" style="width: 600px">
 		        </div>
 		        <div class="item">
-		          <img src="/dfcusa-pm/app/webroot/assets/projects/recycling.png">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/recycling.png" style="width: 600px">
+		        </div>
+		        <div class="item">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/protests.png" style="width: 600px">
+		        </div>
+		        <div class="item">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/children.png" style="width: 600px">
+		        </div>
+		        <div class="item">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/bullying.png" style="width: 600px">
+		        </div>
+		        <div class="item">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/violence.png" style="width: 600px">
+		        </div>
+		        <div class="item">
+		          <img src="/dfcusa-pm/app/webroot/assets/projects/homesless.png" style="width: 600px">
 		        </div>
 		      </div>
 
