--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -8,7 +8,7 @@
 
 <script type="text/mustache-template" id="projectHeaderTemplate">
 	<div class="header b-b bg-white-only" style="position: relative">
-		<div style="position: absolute;"><h4 style="line-height: 55px">{{project.name}}</h4></div>
+		<div style="position: absolute; color: #666"><h2 style="line-height: 55px"><i style="font-size: 12pt">Your Project:</i>&nbsp;&nbsp;<b>{{project.name}}</b></h2></div>
 		<div class="stageicons">
 			<a href="#project/{{project.id}}/home"><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png"></a>
 			<a href="#project/{{project.id}}/feel"><img data-stage-icon="feel" src="/dfcusa-pm/app/webroot/images/icon_feel.png"></a>
@@ -140,7 +140,7 @@
 <script type="text/mustache-template" id="projectsListTemplate">
 	<div class="header b-b bg-white-only">
     <button class="btn btn-success pull-right btn-sm newProject"><i class="fa fa-plus"></i> Add New Project</button>
-    <h4 class="m-t m-b-none" id="title">Your Projects</h4>
+    <h2 class="m-t m-b-none" id="title">Your Projects</h2>
   </div>
 	<ul class="projectsList">
 		
@@ -204,6 +204,10 @@
 			  			<option value="environment">Environment</option>
 			  			<option value="health">Health</option>
 			  			<option value="justice">Justice</option>
+			  			<option value="bullying">Bullying</option>
+			  			<option value="violence">Violence</option>
+			  			<option value="children">Children</option>
+			  			<option value="homelessness">Homelessness</option>
 			  			<option value="other">Other</option>
 			  		</select>
 			  		<span for="projectCategory" class="error-span hide">Please enter a category for this project.</span>
@@ -219,16 +223,36 @@
 				      <ol class="carousel-indicators" style="top: 265px">
 				        <li data-target="#carousel-example-generic" data-slide-to="0" class="active" data-image="farmstand.png"></li>
 				        <li data-target="#carousel-example-generic" data-slide-to="1" data-image="recycling.png"></li>
+    		        <li data-target="#carousel-example-generic" data-slide-to="2" data-image="protests.png"></li>
+    		        <li data-target="#carousel-example-generic" data-slide-to="3" data-image="children.png"></li>
+    		        <li data-target="#carousel-example-generic" data-slide-to="4" data-image="bullying.png"></li>
+    		        <li data-target="#carousel-example-generic" data-slide-to="5" data-image="violence.png"></li>
+    		        <li data-target="#carousel-example-generic" data-slide-to="6" data-image="homesless.png"></li>
 				      </ol>
 
 				      <div class="carousel-inner">
-				        <div class="item active">
-				          <img src="/dfcusa-pm/app/webroot/assets/projects/farmstand.png" style="width: 600px">
-				        </div>
-				        <div class="item">
-				          <img src="/dfcusa-pm/app/webroot/assets/projects/recycling.png">
-				        </div>
-				      </div>
+    		        <div class="item active">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/farmstand.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/recycling.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/protests.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/children.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/bullying.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/violence.png" style="width: 600px">
+    		        </div>
+    		        <div class="item">
+    		          <img src="/dfcusa-pm/app/webroot/assets/projects/homesless.png" style="width: 600px">
+    		        </div>
+    		      </div>
 
 				      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" style="top: 265px">
 				        <span class="fa fa-arrow-circle-left"></span>
@@ -252,11 +276,11 @@
 	<h1>Your Project</h1>
 	<ul class="projecthome">
 	  <li onclick="javascript:location.href = '#project/{{project}}/home';" class="goToSection" data-section="home"><p><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png" class="stageicon">Getting Started</p></li>
-	  <li onclick="javascript:location.href = '#project/{{project}}/feel';"><p><img src="/dfcusa-pm/app/webroot/images/icon_feel.png" class="stageicon">Feel</p></li>
-	  <li onclick="javascript:location.href = '#project/{{project}}/imagine';"><p><img src="/dfcusa-pm/app/webroot/images/icon_imagine.png" class="stageicon">Imagine</p></li>
-	  <li onclick="javascript:location.href = '#project/{{project}}/do';"><p><img src="/dfcusa-pm/app/webroot/images/icon_do.png" class="stageicon">Do</p></li>
-	  <li onclick="javascript:location.href = '#project/{{project}}/share';"><p><img src="/dfcusa-pm/app/webroot/images/icon_share.png" class="stageicon">Share</p></li>
-	  <li onclick="javascript:location.href = '#project/{{project}}/home/files';" class="goToSection" data-section="files"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon">Project Files</p></li>
+	  <li onclick="javascript:location.href = '#project/{{project}}/feel';"><p><img src="/dfcusa-pm/app/webroot/images/icon_feel.png" class="stageicon hide">Feel</p></li>
+	  <li onclick="javascript:location.href = '#project/{{project}}/imagine';"><p><img src="/dfcusa-pm/app/webroot/images/icon_imagine.png" class="stageicon hide">Imagine</p></li>
+	  <li onclick="javascript:location.href = '#project/{{project}}/do';"><p><img src="/dfcusa-pm/app/webroot/images/icon_do.png" class="stageicon hide">Do</p></li>
+	  <li onclick="javascript:location.href = '#project/{{project}}/share';"><p><img src="/dfcusa-pm/app/webroot/images/icon_share.png" class="stageicon hide">Share</p></li>
+	  <li onclick="javascript:location.href = '#project/{{project}}/home/files';" class="goToSection" data-section="files"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon hide">Project Files</p></li>
 	</ul>
 	<div class="clear"></div>
 </script>
@@ -269,7 +293,7 @@
 	  <li class="goToSection" data-section="skills"><a href="#project/{{project}}/{{stage}}/skills"><p>Skills & Activities</p></a></li>
 	  <li class="goToSection hide" data-section="activities"><a href="#project/{{project}}/{{stage}}/activities"><p>Activities</p></a></li>
 	  <li class="goToSection" data-section="submit"><a href="#project/{{project}}/{{stage}}/submit"><p>Complete This Stage</p></a></li>
-	  <li class="goToSection pull-left" data-section="submit"><a href="#project/{{project}}/home"><p style="font-size: 10pt; margin-left: 20px">< back to home</p></a></li>
+	  <li class="goToSection pull-left" data-section="back"><a href="#project/{{project}}/home"><p style="font-size: 10pt; margin-left: 20px">< back to home</p></a></li>
 	</ul>
 	<div class="clear"></div>
 </script>
