--- a/app/webroot/appsrc/src/templates/admin.html
+++ b/app/webroot/appsrc/src/templates/admin.html
@@ -221,7 +221,7 @@
 		  </div>
 		  <div class="form-group">
 	  		<label>Author</label>
-	  		<select class="form-control" id="user_id" name="user_id"></select>
+	  		<select class="form-control" id="user_id" name="user_id" data-value="{{activity.user_id}}"></select>
 	    </div>		  
 			<div class="form-group">
 				<label>Description</label>
