--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -1,7 +1,10 @@
 <script type="text/mustache-template" id="contentTemplate">
 	<div class="insidepage">
+   <div class="testdiv">test</div>
+    <div class="fullcontentview">
+    </div>
 	  <div class="contents">
-	    
+
 	  </div>
 	</div>
 </script>
@@ -143,7 +146,7 @@
     <h2 class="m-t m-b-none" id="title">Your Projects</h2>
   </div>
 	<ul class="projectsList">
-		
+
 	</ul>
 </script>
 
@@ -154,7 +157,7 @@
 	    <aside>
 	      <div class="pos-rlt">
 	        <span class="arrow left hidden-xs"></span>
-	        <div class="panel-body">                      
+	        <div class="panel-body">
 	          <div class="clearfix m-b">
 	            <small class="text-muted pull-right">{{humanDateElapsed project.last_updated}}</br>{{project.mentor.first_name}} {{project.mentor.last_name}}</small>
  	            <a href="javascript:void(0)" class="thumb-sm pull-left m-r">
@@ -184,6 +187,30 @@
 </script>
 
 <div id="newProjectModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Create New Project</h4>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="existingNewProject">I know what my project is</a><br>
+        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Approve.svg/240px-Approve.svg.png" alt="check mark">
+        <!-- Wikicommons fair use image -->
+        <br>
+        <button type="button" class="blankNewProject">I don't know what my project is</a><br>
+        <img src="http://upload.wikimedia.org/wikipedia/commons/1/13/Glossy_3d_blue_questionmark.png" alt="question mark">
+        <!-- Wikicommons fair use image -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary createProject">Create Project</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="existingNewProjectModal" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
 	    <div class="modal-header">
@@ -313,7 +340,7 @@
 
 <script type="text/mustache-template" id="skillsTemplate">
 	{{{content.content_obj.skills.text}}}
-	<section class="panel clearfix skillsBox"> 
+	<section class="panel clearfix skillsBox">
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
       <ul class="steps">
 	      <li class="step active"><a href="javascript:void(0)" class="changeSkill" data-target="#all" data-skill="all"><span class="badge badge-info">1</span>{{ucWords content.stage}} Activities</a></li>
@@ -406,7 +433,7 @@
 		         {{#if_eq this.form 'list'}}
 				        <br/><a href="javascript:void(0)" class="btn btn-sm btn-primary addListDeliverable marginButton listItemAdd" data-key="{{this.key}}">Add Item</a>
 		         		<div class="items">
-		         			
+
 		         		</div>
 		         {{/if_eq}}
 		        </div>
@@ -462,7 +489,7 @@
 	<div class="header b-b bg-white-only activitiesHeader">
     <h4 class="m-t m-b-none" id="title">Search Activities</h4>
     <div class="pull-right col-md-9 searchToolbar">
-    	
+
     </div>
   </div>
 	<div class="activitiesContent">
